--- a/param/costmap_common_params_karina.yaml
+++ b/param/costmap_common_params_karina.yaml
@@ -1,10 +1,7 @@
-# footprint: [[0.1016, 0.36068], [0.1016, -0.36068], [-0.1016, -0.36068], [-0.1016, -0.28448], [-0.6096, -0.25908],
-#               [-0.7874, -0.18415], [-0.7874, 0.18415], [-0.6096, 0.25908], [-0.1016, 0.28448], [-0.1016, 0.36068]]
-
 footprint: [[0.5016, 0.36068], [0.5016, -0.36068], [0.2016, -0.36068], [0.2016, -0.28448], [-0.4096, -0.25908],
               [-0.5, -0.18415], [-0.5, 0.18415], [-0.4096, 0.25908], [0.2016, 0.28448], [0.2016, 0.36068]]
 
-global_frame: odom
+global_frame: base_link
 robot_base_frame: base_link
 width: 8.0
 height: 8.0
@@ -23,12 +20,7 @@ plugins:
     - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"}
     - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
 
-# obstacle_layer:
-#     observation_sources: scan
-#     scan: {sensor_frame: velodyne, data_type: LaserScan, topic: /scan, marking: true, clearing: true, observation_persistence: 0, obstacle_range: 3.0, raytrace_range: 3.5, min_obstacle_height: 0.0}
-
 obstacle_layer:
     observation_sources: scan1 scan2
-    scan1: {sensor_frame: velodyne, data_type: LaserScan, topic: /scan, marking: true, clearing: true, observation_persistence: 0, obstacle_range: 4.0, raytrace_range: 4, min_obstacle_height: 0.0}
-    # scan2: {sensor_frame: lane_scan_frame, data_type: LaserScan, topic: /img_to_laser/lane_scan, marking: true, clearing: true, observation_persistence: 0, obstacle_range: 3.0, raytrace_range: 3.5, min_obstacle_height: 0.0, inf_is_valid: true}
+    scan1: {sensor_frame: laser, data_type: LaserScan, topic: /scan, marking: true, clearing: true, observation_persistence: 0, obstacle_range: 4.0, raytrace_range: 4, min_obstacle_height: 0.0}
     scan2: {sensor_frame: lane_scan_frame, data_type: LaserScan, topic: /img_to_laser/lane_scan, marking: true, clearing: true, observation_persistence: 0, obstacle_range: 4.0, raytrace_range: 4, min_obstacle_height: 0.0}
