--- a/param/costmap_common_params_karina.yaml
+++ b/param/costmap_common_params_karina.yaml
@@ -22,5 +22,5 @@ plugins:
 
 obstacle_layer:
     observation_sources: scan1 scan2
-    scan1: {sensor_frame: laser, data_type: LaserScan, topic: /scan, marking: true, clearing: true, observation_persistence: 0, obstacle_range: 4.0, raytrace_range: 4, min_obstacle_height: 0.0}
+    scan1: {sensor_frame: laser, data_type: LaserScan, topic: /scan, marking: true, clearing: true, observation_persistence: 0, obstacle_range: 4.0, raytrace_range: 4, min_obstacle_height: 0.0, inf_is_valid: true}
     scan2: {sensor_frame: lane_scan_frame, data_type: LaserScan, topic: /img_to_laser/lane_scan, marking: true, clearing: true, observation_persistence: 0, obstacle_range: 4.0, raytrace_range: 4, min_obstacle_height: 0.0}
