Added multicam support

--- a/param/costmap_common_params_karina.yaml
+++ b/param/costmap_common_params_karina.yaml
@@ -1,4 +1,4 @@
-footprint:
+fotprint:
     [
         [0.5016, 0.36068],
         [0.5016, -0.36068],
@@ -35,9 +35,9 @@ obstacle_layer:
     observation_sources: scan1 scan2
     scan1:
         {
-            sensor_frame: laser,
+            sensor_frame: velodyne,
             data_type: LaserScan,
-            topic: /scan_filtered,
+            topic: /scan,
             marking: true,
             clearing: true,
             observation_persistence: 0,
