--- a/param/obstacle_costmap_params.yaml
+++ b/param/obstacle_costmap_params.yaml
@@ -35,19 +35,19 @@ plugins:
 
 obstacle_layer:
   observation_sources: scan1
-  scan1: {
-      # velodyne in sim
-      sensor_frame: laser,
-      data_type: LaserScan,
-      topic: /scan_filtered,
-      marking: true,
-      clearing: true,
-      observation_persistence: 0,
-      obstacle_range: 4.0,
-      raytrace_range: 8.0,
-      min_obstacle_height: 0.0,
-      inf_is_valid: true,
-    }
+  # scan1: {
+  #     # velodyne in sim
+  #     sensor_frame: laser,
+  #     data_type: LaserScan,
+  #     topic: /scan_filtered,
+  #     marking: true,
+  #     clearing: true,
+  #     observation_persistence: 0,
+  #     obstacle_range: 4.0,
+  #     raytrace_range: 8.0,
+  #     min_obstacle_height: 0.0,
+  #     inf_is_valid: true,
+  #   }
   # scan2: {
   #   sensor_frame: base_link,
   #   data_type: LaserScan,
