--- a/param/costmap_common_params_karina.yaml
+++ b/param/costmap_common_params_karina.yaml
@@ -1,16 +1,18 @@
-fotprint:
-    [
-        [0.5016, 0.36068],
-        [0.5016, -0.36068],
-        [0.2016, -0.36068],
-        [0.2016, -0.28448],
-        [-0.4096, -0.25908],
-        [-0.5, -0.18415],
-        [-0.5, 0.18415],
-        [-0.4096, 0.25908],
-        [0.2016, 0.28448],
-        [0.2016, 0.36068],
-    ]
+# fotprint:
+#     [
+#         [0.5016, 0.36068],
+#         [0.5016, -0.36068],
+#         [0.2016, -0.36068],
+#         [0.2016, -0.28448],
+#         [-0.4096, -0.25908],
+#         [-0.5, -0.18415],
+#         [-0.5, 0.18415],
+#         [-0.4096, 0.25908],
+#         [0.2016, 0.28448],
+#         [0.2016, 0.36068],
+#     ]
+
+footprint: [[0.12, 0.36], [0.12, -0.36], [-0.76, -0.36], [-0.76, 0.36]]
 
 global_frame: base_link
 robot_base_frame: base_link
